updated at: 2023-04-25 21:02, Hand and a half（片手半剣） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/87/943587.html
+++ b/VRChat/87/943587.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YVHj3FRtUU4IFY7oTWrNK5j0/bZfgpqd/bybIm3O5GE="></script>
+    "VTud/1uUscWyLYHSDYphe9nn4ziSDqGgfyz3UQ+5QLI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Hand and a half（片手半剣）","description":"片手持ち、両手持ちの2形態を併用することを想定した片手半剣です\n\nSketchfabで3Dモデルの閲覧もできます\n\nポリゴン数　△3152\nテクスチャ　2048*2048 3枚\n\nunityパッケージを同封しているのですぐに使い始めることができます\n\n※２枚目、３枚目のモデル\nシンヤの模造武具 様 ブレイダーちゃん \nhttps://booth.pm/ja/items/954766","url":"https://booth.pm/ja/items/943587","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/943587/1e44ce7c-9f8a-4535-a0d3-f87d2c117e67_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YVHj3FRtUU4IFY7oTWrNK5j0/bZfgpqd/bybIm3O5GE="></script>
+    nonce="VTud/1uUscWyLYHSDYphe9nn4ziSDqGgfyz3UQ+5QLI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/943587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/943587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
