--- a/VRChat/23/943423.html
+++ b/VRChat/23/943423.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AMjS329T+0i3eySj7i7VVknfFUH8drOZXUPmk3qGUJ0="></script>
+    "J/674/lODUDwZRKOE3H4/gbVVL+orRWXvkrBHSv0uwA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat風アイコン詰め合わせ","description":"日常をバーチャルに変える為のアイコン詰め合わせ。\n\n・利用規約\n改変：可\n商用利用：可\n素材の再配布：不可\n\n・免責事項\n本データを使用して発生したいかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/943423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/943423/6a6301c6-f7ee-448f-9647-6cf7de8f9c21_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AMjS329T+0i3eySj7i7VVknfFUH8drOZXUPmk3qGUJ0="></script>
+    nonce="J/674/lODUDwZRKOE3H4/gbVVL+orRWXvkrBHSv0uwA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -166,10 +168,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/943423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              614
+                              615
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -181,14 +183,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/943423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              614
+                              615
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
