updated at: 2023-04-25 21:02, レンチロッド - TsubokuLab Store - BOOTH

--- a/VRChat/15/943415.html
+++ b/VRChat/15/943415.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a+ebREE5Zi2BDwzYtzoWuE0nRI80YtmjV/Qz+HA/nOo="></script>
+    "8/XJkyyL1+zbiYzm6Cr2bbi7zXRNNAPc/EeLfrYQxXg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"レンチロッド","description":"FANBOX支援者の方へ、商品を無料プレゼント中です↓\nhttps://www.pixiv.net/fanbox/creator/5179544/post/286899\n------------\n\nゲーム開発やVRChatなどで使える武器3Dモデル\n\n2019/02/12 法線方向の微調整と、マイナスドライバーの追加を行いました。","url":"https://booth.pm/ja/items/943415","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/943415/f3d8847c-5405-4fba-831d-ae8d9d1dccb3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a+ebREE5Zi2BDwzYtzoWuE0nRI80YtmjV/Qz+HA/nOo="></script>
+    nonce="8/XJkyyL1+zbiYzm6Cr2bbi7zXRNNAPc/EeLfrYQxXg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -167,7 +169,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/943415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -182,14 +184,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/943415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
