--- a/VRChat/14/943414.html
+++ b/VRChat/14/943414.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jpgtZ8nKU83luwVJ1oODbNQW0Yu866MNVA3xLcc8C84="></script>
+    "VcW7zs3qdEhmo9YiPiKXMvddolvO89FFHTe/ioK6dGg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】坪倉輝明","description":"僕の体です。\nUnityPackage形式での配布になります。\nVRChat向けに調整済みのモデルです。\nフルボディトラッキング対応＆トポロジー調整をしたV2も追加しました。\n\n-------------------\n【 規約要約 】\n商用利用 ： 個人→◯　法人→ご連絡下さい\nなりすまし : ×\nエロ・グロ : ×\n\n改変 : ◯\n自作のアプリや動画などに利用 : ◯\nソーシャルVR(VRChat等）のアバターとして利用 ： ◯\n\n","url":"https://booth.pm/ja/items/943414","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/943414/d5e93dfe-4aea-45d5-ba4e-a36a982e70d8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jpgtZ8nKU83luwVJ1oODbNQW0Yu866MNVA3xLcc8C84="></script>
+    nonce="VcW7zs3qdEhmo9YiPiKXMvddolvO89FFHTe/ioK6dGg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/943414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              471
+                              472
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/943414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              471
+                              472
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
