updated at: 2023-04-25 21:02, VRChat用アバター - WORKSHOP - BOOTH

--- a/VRChat/94/942794.html
+++ b/VRChat/94/942794.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/tYvgcRqjsBgpMTFmrH+NO6vF4LxgiflbDloxnnKgE8="></script>
+    "zc7loVNBMDmXJjCre2EnGLzKUx2EcyZ60OLqO7qHFNQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター","description":"VRChatでの利用を主としたHumanoidボーン入りゴミ箱です。\nFBXデータ、PNG画像、Unity Package同梱。\n\n規約みたいなの\n\n・他の方に迷惑をかけそうだったり、\n  めんどくさそうなアレに使ったりしなければ大体OKだと思います\n・著作権は多分放棄してるので\n  再配布とか改変とかしたりしなかったりしてください\n・当アバターを利用したことにより生じたなんかについて\n  作者は一切の責任を負いませんと言い切りたい所ですが、\n  この文章のせいでより厄介なケースに発展しちゃったりするらしいですね。よくわかんないです","url":"https://booth.pm/ja/items/942794","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10c5f6cb-42b1-49c1-b042-77878355a31f/i/942794/a4a5322d-7ffe-4730-b0ef-0d9307e27ba5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/tYvgcRqjsBgpMTFmrH+NO6vF4LxgiflbDloxnnKgE8="></script>
+    nonce="zc7loVNBMDmXJjCre2EnGLzKUx2EcyZ60OLqO7qHFNQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/942794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/942794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
