--- a/VRChat/31/942431.html
+++ b/VRChat/31/942431.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "50OnPyomnZFf1VgXOJ2WY+Il9Zf1/UTTJGhRsDjmcVI="></script>
+    "lFNM0/5yJpTLjyRkgXzl/lVGoa0IvtEym0TaOlurNjM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"郵便ポストの3Dモデル","description":"VRCをやってみたいけどデフォルトのアバターはちょっと．．．という方に向けて作ったつもりです。というよりもVRC初心者に向けて作りました。なので同封するpdfを見ながら操作してもらえれば無事にアップロードできるはずです。やったね！（pdfの方が作るの大変でした）","url":"https://booth.pm/ja/items/942431","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/96343e5e-4717-4443-b284-8a82811829ec/i/942431/d2636712-2447-449b-bddb-becae91dc4a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="50OnPyomnZFf1VgXOJ2WY+Il9Zf1/UTTJGhRsDjmcVI="></script>
+    nonce="lFNM0/5yJpTLjyRkgXzl/lVGoa0IvtEym0TaOlurNjM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/942431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/942431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
