--- a/VRChat/52/942252.html
+++ b/VRChat/52/942252.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iYIY6QmgwOKDppECvUUs7ozCOax7UXUMocF7skg99OI="></script>
+    "ceMRpi0zsUkhNVJJP0HjaXRC7oymvWqiNV+/Ds6yiDM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用ふわー+ずぽっアニメーション","description":"VRChat・Unityのふわーっと浮かび上がる.animファイルのアニメーションです。\n2018/1/7 前方にずぽっと飛び込むモーションを追加しました。\n\n\n.animファイルのみでモデル自体は含みません。\n導入の仕方は目の前の箱で調べてください。","url":"https://booth.pm/ja/items/942252","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/091e5aa4-67bb-479c-8d17-dd9330fc9eeb/i/942252/93213dfe-91be-43a6-8e5d-f2848938374f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iYIY6QmgwOKDppECvUUs7ozCOax7UXUMocF7skg99OI="></script>
+    nonce="ceMRpi0zsUkhNVJJP0HjaXRC7oymvWqiNV+/Ds6yiDM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/942252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               376
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/942252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               376
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
