--- a/VRChat/95/942095.html
+++ b/VRChat/95/942095.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "d/41RIWXWzKcNaM+F/+6gIozXpuUXXk/XyjWabItKEI="></script>
+    "Zbh79VIzRmUYb4WTucI8l/ESfRjxnvIHETezeJ//RUU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あめ子の夏祭りセット","description":"夏をみんなで満喫したい思いから生まれた『あめ子の夏祭りセット』です。\nVRChatのアバターに組み込んで夏を楽しもう！\n\n【セット内容】\nわたあめ\nわたあめ(ひつじ)\nわたあめ(袋入り)\nお面\n…各FBXファイル、テクスチャ\n\n手持ち花火\n…FBXファイル、テクスチャ、音声、説明書\n\n\n【OK】\nVRChatでのご利用\n動画や凸配信への映り込み(収益化・非収益化を問わず)\n夏祭りセットを詳細に紹介してくださる場合、配布元の表記をお願いいたします。\n\n【NG】\nVRChat外でのご利用\n自作発言\n原型・色彩を変更する改変(利用できるようアバターへ組み込む以外の改変)\n二次配布\n※素材を他の人が利用できる状態で提供すること。\nぺデスタルで不特定多数が使える状態のアバターへの組み込み、\n他者がデータのダウンロードができる環境の構築など\nVRchatへのアップロード以外でデータを他者へ譲り渡す行為\n\n\n制作：安倍マリステラ\n一部テクスチャ：わたあめ子","url":"https://booth.pm/ja/items/942095","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4a7842d-1a6a-4d2b-a80c-4c704fe5040b/i/942095/47085bc8-309d-4778-8b9d-77f308904f7e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d/41RIWXWzKcNaM+F/+6gIozXpuUXXk/XyjWabItKEI="></script>
+    nonce="Zbh79VIzRmUYb4WTucI8l/ESfRjxnvIHETezeJ//RUU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/942095/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/942095/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
