--- a/VRChat/65/941765.html
+++ b/VRChat/65/941765.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6r1Nyi+flwsHfQRJwNa1spNCtmcb3bJpo2AI2OfxVYY="></script>
+    "AqeawrqBUSVSPUFTjY69d+chpj0v4Eb7eEUfSgMi/d0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"飾り気のない鉈 △352 fbx うにぱけ","description":"「なんで拾ったんだっけ…」\n「あんまり切れなさそうだしタダでいいよ～」\n「使えそうだったらスキ！してってね～」\n　\n　簡素な作りの腰鉈\n　鞘は△338だがケチっている分両面描画でないと内側が透ける\n　改変、再配布等は有償無償を問わず自由だそうだ\n　手入れをしたら普通によく切れた","url":"https://booth.pm/ja/items/941765","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/941765/dcc39411-7001-46d6-a589-7ca61ea54776_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6r1Nyi+flwsHfQRJwNa1spNCtmcb3bJpo2AI2OfxVYY="></script>
+    nonce="AqeawrqBUSVSPUFTjY69d+chpj0v4Eb7eEUfSgMi/d0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/941765/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/941765/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
