updated at: 2023-04-25 21:03, VRChat向け3Dモデル　Mk1000 - virtualgaroth - BOOTH

--- a/VRChat/34/941734.html
+++ b/VRChat/34/941734.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FFJ3h917fpIR8pfJDqdcVN5svHI9JWQospNORYmpibo="></script>
+    "qbgQiuxJdwsO+B1L+Ppt3nE0TJS32qkN0DmM13Z/iEA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け3Dモデル　Mk1000","description":"本製品はVRアバター向けhumanoid仕様の3Dモデルです。\n改変や商用利用はご自由にどうぞ。\n\n瞬きに加え、VRChat向けリップシンク4種(sil,aa,oh,th)を用意しております。\n\nマテリアルを複数用意してあるため、カラーリングの変更を容易に行えるようにしています。\n\n10点トラッキングでも問題なく動作します。\n\n●製品内容\nFBXファイル(7900ポリゴン)\nテクスチャファイル(UV展開図含む)\nunitypackage(Unity 5.6.3p1のみ動作確認済み)\n利用規約\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n\n本データを利用したことによる損害に対する責任は負わないものとします。\n\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n\n\n//\n2018/07/25\n規約を一部改定しました\n2018/07/27\n禁則事項を一部改定しました","url":"https://booth.pm/ja/items/941734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/941734/a585c21c-afa9-4411-98a6-f09d3503840d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FFJ3h917fpIR8pfJDqdcVN5svHI9JWQospNORYmpibo="></script>
+    nonce="qbgQiuxJdwsO+B1L+Ppt3nE0TJS32qkN0DmM13Z/iEA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/941734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/941734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
