updated at: 2023-04-25 21:04, XRG-1 A2 - 消しゴムの筆箱 - BOOTH

--- a/VRChat/75/940975.html
+++ b/VRChat/75/940975.html
@@ -71,9 +71,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I69RB+wGYqajEHNTVSIeeNl/RV3+g+dopzaglnL2MiY="></script>
+    "pTB5Se5g5Jfd54XmC0rRl5ny1Di+q5Sqi4PUHMpZ8qM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"XRG-1 A2","description":"XRG-1 A2","url":"https://booth.pm/ja/items/940975","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/940975/6eec9287-aab6-42c7-8502-35ff44628945_base_resized.jpg"}
     </script>
@@ -87,7 +87,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I69RB+wGYqajEHNTVSIeeNl/RV3+g+dopzaglnL2MiY="></script>
+    nonce="pTB5Se5g5Jfd54XmC0rRl5ny1Di+q5Sqi4PUHMpZ8qM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -111,6 +111,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/940975/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/940975/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
