--- a/VRChat/03/940403.html
+++ b/VRChat/03/940403.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mNf7A8na0lgkVMUBYeiD3z3ybCO0hH4Rc16iUWAacKE="></script>
+    "pmDfTWSqEoS8prZ1cSVhhBaOOfF9djgZQE8/N80NL/g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DotMosaic Shader","description":"Unity用の、ドットモザイク効果を表現するシェーダーです。\nパラメータでビーズアート風に見できます。\n\n任意のオブジェクト(板等)に利用すると、その背景部分に効果が適用されます。\n\nパラメータは4種類で、\n\nBase Color: 地の色\nFineness: ドットの細かさ\nRadius: ドットの半径\nHole Ratio: 穴の割合(ビーズ風表現)\n\nが調整できます。\n\nVRChatでも利用可能です。\n\n自由に改造して構いませんが、データの再配布、販売は不可とします。\nまた利用は自己責任とし、トラブルが発生した場合でも一切の責任は負いかねますので、予めご了承ください。\n\n紹介記事\nポストエフェクトっぽく世界を変える試み その2\nhttp://onoty3d.hatenablog.com/entry/2018/07/23/031151\n\n【2018/08/26】\n任意のテクスチャをドットモザイク風にするシェーダー、DotMosaic_Textureを追加しました。\n\nパラメータは6種類で、\n\nTexture: 対象テクスチャ\nColor: テクスチャに乗算する色\nBase Color: 地の色\nFineness: ドットの細かさ\nRadius: ドットの半径\nHole Ratio: 穴の割合(ビーズ風表現)\n\nが調整できます。","url":"https://booth.pm/ja/items/940403","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a5ee2955-f931-4ee1-9f8c-8ffe0ada05e8/i/940403/66221ccc-6dce-4d7c-963b-10d8363dc999_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mNf7A8na0lgkVMUBYeiD3z3ybCO0hH4Rc16iUWAacKE="></script>
+    nonce="pmDfTWSqEoS8prZ1cSVhhBaOOfF9djgZQE8/N80NL/g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/940403/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/940403/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
