--- a/VRChat/29/939529.html
+++ b/VRChat/29/939529.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "glF4oJfx7Lbh8Z0HhoPygitxPiUdrlVosP+PzefG+II="></script>
+    "SBOuUL6sVbh9xxSkzLZO5MGd5k+mnJk+ojEkO2s83ZI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"古びた丸眼鏡 △556 fbx うにぱけ","description":"「ん～、何だっけそれ」\n「わかんないからタダでいいよ～」\n「使えそうだったらスキ！してってね～」\n　\n　アンティーク調の丸眼鏡\n　蔓にボーンが通っているので動かせる\n　改変、再配布等は有償無償を問わず自由だそうだ\n　でもレンズが入ってない","url":"https://booth.pm/ja/items/939529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/939529/2db98039-62f0-492d-97db-0125cc52c1f0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="glF4oJfx7Lbh8Z0HhoPygitxPiUdrlVosP+PzefG+II="></script>
+    nonce="SBOuUL6sVbh9xxSkzLZO5MGd5k+mnJk+ojEkO2s83ZI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/939529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              372
+                              373
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/939529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              372
+                              373
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
