updated at: 2023-04-25 21:05, 【無料DL可】３Dモデル：白狐ちゃんキーホルダー - 白竹屋妖具店/BOOTH支店 - BOOTH

--- a/VRChat/83/939983.html
+++ b/VRChat/83/939983.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IzEkNiGY2ksYB46YYgNg4isB6xXCpwkC2jWG7J1h5ds="></script>
+    "8V7WyCMUgpsZkufUO91KEdv76zwFiYEbx8Qjq58/dsE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL可】３Dモデル：白狐ちゃんキーホルダー","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\nお好きな場所にキーホルダーで取り付ける、あるいはチェーン部分を外して人形のようにお使いください。\nチェーン部分にはボーンが入っておりますので好きなように曲げたり、ダイナミックボーンなどのボーンを揺らすものを入れてご利用ください。\n\n\n【利用規約】\nこちらのモデルは商用・改変・成人向けなどの様々なコンテンツで使用することができます。\n本商品に含まれるデータを元にして、3Dモデルあるいは画像自体に商品性が依存するもの（例：素材集など）を製造、販売することはできません。\n加工なしの二次配布は禁止させていただきます。\n\n\n【商品内容】\n下記のファイルが梱包されたzipファイルとなります。\n\n・Readme.txt（必ずお読みください）\n・FBXファイル（fox_mini.fbx / ポリゴン数：991）\n・tex.png（テクスチャーファイル）\n・tex.psd（テクスチャーの編集用ファイル）\n・DynamicBone_setting.png（unityの有料アセット「Dynamic Bone」を使用する場合のオススメ設定です）\n\nunityなどで読み込んだ後、各マテリアルをご自身で編集することを推奨します。","url":"https://booth.pm/ja/items/939983","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/939983/c7fee0ac-7a7d-464c-be8a-f32e6ccb007f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IzEkNiGY2ksYB46YYgNg4isB6xXCpwkC2jWG7J1h5ds="></script>
+    nonce="8V7WyCMUgpsZkufUO91KEdv76zwFiYEbx8Qjq58/dsE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/939983/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               219
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/939983/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               219
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
