updated at: 2023-04-25 21:06, ローポリ食べ物「うな重」【VRChat向け】 - 赤銅インペール - BOOTH

--- a/VRChat/71/938371.html
+++ b/VRChat/71/938371.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DUKAJOOH9l9ErSsM293CpfGZ4I1gu+zbohJL892asmg="></script>
+    "VdOvU0qgCKPBvQMB94oV3TdBJmBEwB6Ipb5KeGs1ATI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリ食べ物「うな重」【VRChat向け】","description":"--------------------------------------------------\n\n◆うな重\n\nUnity（主にVRChat）で使える食べ物「うな重」です。\n土用の丑の日でなくてもお使い下さい。\n\n--------------------------------------------------\n\n◆「うな重.unitypackage」の中身と情報\n\n□うな重\n┣□Materials\n┃┣〇BaceColor.png\t：ベーステクスチャ\n┃┣〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┃┗〇NormalMap.png\t：ノーマルマップテクスチャ\n┗〇うな重.fbx\t：モデルデータ\n\nポリゴン数\t：△30\n\n--------------------------------------------------\n\n◆注意事項\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/938371","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/938371/296fd318-490a-412d-a5a0-4afc37ff0eaf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DUKAJOOH9l9ErSsM293CpfGZ4I1gu+zbohJL892asmg="></script>
+    nonce="VdOvU0qgCKPBvQMB94oV3TdBJmBEwB6Ipb5KeGs1ATI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/938371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/938371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
