updated at: 2023-04-25 21:09, おはな(VRChat用) - Silinder&#39;s Shop - BOOTH

--- a/VRChat/18/933118.html
+++ b/VRChat/18/933118.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xNR+HwCn+68vPnVbGTjox/O6BCSxI1x2D4wX20UK4zM="></script>
+    "71Q8pK8M7/OBW/AjpQCvW6ML43qiseZt3tf7VMn6wO8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おはな(VRChat用)","description":"VRChatで使えるおはなです。\n△ポリ374","url":"https://booth.pm/ja/items/933118","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10d948b8-0b72-4560-ab78-7df7442c2fa1/i/933118/55e41404-5ef3-4255-b84c-09e06b6bf8ce_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xNR+HwCn+68vPnVbGTjox/O6BCSxI1x2D4wX20UK4zM="></script>
+    nonce="71Q8pK8M7/OBW/AjpQCvW6ML43qiseZt3tf7VMn6wO8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,10 +155,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/933118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              364
+                              365
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/933118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              364
+                              365
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
